jdk/jfr/event/runtime/TestResidentSetSizeEvent.java fails with "The size should be less than or equal to peak"

XMLWordPrintable

    • jfr
    • b27
    • x86_64
    • os_x

        The following test failed in the JDK22 CI:

        jdk/jfr/event/runtime/TestResidentSetSizeEvent.java

        Here's a snippet from the log file:

        #section:main
        ----------messages:(7/432)----------
        command: main -Xms16m -Xmx128m -Xlog:gc jdk.jfr.event.runtime.TestResidentSetSizeEvent true
        reason: User specified action: run main/othervm -Xms16m -Xmx128m -Xlog:gc jdk.jfr.event.runtime.TestResidentSetSizeEvent true
        started: Mon Aug 28 14:18:39 GMT 2023
        Mode: othervm [/othervm specified]
        Additional options from @modules: --add-modules jdk.jfr,jdk.management
        finished: Mon Aug 28 14:18:41 GMT 2023
        elapsed time (seconds): 2.128
        ----------configuration:(3/50)----------
        Boot Layer
          add modules: jdk.jfr jdk.management

        ----------System.out:(30/2293)----------
        [0.011s][info][gc] Using G1
        [0.774s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 9M->2M(18M) 4.672ms
        [1.103s][info][gc] GC(1) Pause Young (Normal) (G1 Evacuation Pause) 8M->3M(18M) 3.873ms
        [1.284s][info][gc] GC(2) Pause Young (Normal) (G1 Evacuation Pause) 10M->5M(18M) 1.756ms
        [1.305s][info][gc] GC(3) Pause Young (Normal) (G1 Evacuation Pause) 10M->10M(18M) 2.698ms
        [1.318s][info][gc] GC(4) Pause Young (Concurrent Start) (G1 Evacuation Pause) 11M->12M(18M) 1.016ms
        [1.318s][info][gc] GC(5) Concurrent Mark Cycle
        [1.326s][info][gc] GC(5) Pause Remark 12M->12M(24M) 1.409ms
        [1.328s][info][gc] GC(6) Pause Young (Normal) (G1 Evacuation Pause) 13M->13M(24M) 1.308ms
        [1.329s][info][gc] GC(5) Pause Cleanup 13M->13M(24M) 0.056ms
        [1.330s][info][gc] GC(5) Concurrent Mark Cycle 11.899ms
        [1.333s][info][gc] GC(7) Pause Young (Prepare Mixed) (G1 Evacuation Pause) 15M->15M(24M) 1.235ms
        [1.335s][info][gc] GC(8) Pause Young (Mixed) (G1 Evacuation Pause) 16M->16M(49M) 1.144ms
        [1.349s][info][gc] GC(9) Pause Young (Normal) (G1 Evacuation Pause) 26M->26M(49M) 4.119ms
        [1.355s][info][gc] GC(10) Pause Young (Concurrent Start) (G1 Evacuation Pause) 32M->33M(49M) 3.738ms
        [1.355s][info][gc] GC(11) Concurrent Mark Cycle
        [1.381s][info][gc] GC(12) Pause Young (Normal) (G1 Evacuation Pause) 37M->38M(49M) 2.746ms
        [1.383s][info][gc] GC(13) Pause Young (Normal) (G1 Evacuation Pause) 40M->40M(81M) 1.430ms
        [1.400s][info][gc] GC(11) Pause Remark 51M->51M(87M) 3.852ms
        [1.415s][info][gc] GC(14) Pause Young (Normal) (G1 Evacuation Pause) 51M->52M(87M) 4.638ms
        [1.428s][info][gc] GC(11) Pause Cleanup 54M->54M(87M) 0.283ms
        [1.429s][info][gc] GC(11) Concurrent Mark Cycle 74.393ms
        [1.438s][info][gc] GC(15) Pause Young (Prepare Mixed) (G1 Evacuation Pause) 62M->62M(87M) 5.704ms
        [1.456s][info][gc] GC(16) Pause Young (Mixed) (G1 Evacuation Pause) 69M->69M(87M) 4.723ms
        [1.459s][info][gc] GC(17) Pause Young (Concurrent Start) (G1 Evacuation Pause) 73M->74M(87M) 2.501ms
        [1.459s][info][gc] GC(18) Concurrent Mark Cycle
        [1.488s][info][gc] GC(18) Pause Remark 75M->75M(127M) 1.388ms
        [1.513s][info][gc] GC(18) Pause Cleanup 75M->75M(127M) 0.102ms
        [1.524s][info][gc] GC(18) Concurrent Mark Cycle 64.673ms
        [1.660s][info][gc] GC(19) Pause Young (Prepare Mixed) (G1 Evacuation Pause) 77M->75M(127M) 2.872ms
        ----------System.err:(14/1064)----------
        java.lang.RuntimeException: The size should be less than or equal to peak: expected that 88915968 <= 88911872
        at jdk.test.lib.Asserts.fail(Asserts.java:594)
        at jdk.test.lib.Asserts.assertLessThanOrEqual(Asserts.java:154)
        at jdk.jfr.event.runtime.TestResidentSetSizeEvent.verifyExpectedEventTypes(TestResidentSetSizeEvent.java:83)
        at jdk.jfr.event.runtime.TestResidentSetSizeEvent.main(TestResidentSetSizeEvent.java:92)
        at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
        at java.base/java.lang.reflect.Method.invoke(Method.java:580)
        at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
        at java.base/java.lang.Thread.run(Thread.java:1570)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: The size should be less than or equal to peak: expected that 88915968 <= 88911872
        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: The size should be less than or equal to peak: expected that 88915968 <= 88911872
        ----------rerun:(40/7372)*----------

              Assignee:
              Erik Gahlin
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: